--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Perfil T - Catálogo</title>
+  <title>Perfil T - Catálogo Miranda Alumínio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
+   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -74,9 +74,9 @@
 </head>
 <body>
 
-  <img src="imagens/cabecalho_perfil_t.png" class="header-img" alt="imagem de um perfil T">
+<img src="imagens/cabecalho_perfil_t.png" class="header-img" alt="imagem de um perfil T">
 
-  <div class="table-wrapper">
+<div class="table-wrapper">
     <table>
       <thead>
         <tr>
